--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section class="hero-section section overlay">
             <div class="container">
                 <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-                <button type="button" class="hero-btn btn" data-modal-open>Замовити послугу</button>
+                <button type="button" class="main-btn btn" data-modal-open>Замовити послугу</button>
             </div>
         </section>
         <!--Особливості компанії-->
@@ -99,7 +99,7 @@
         <!--Чим ми займаємося-->
         <section class="work section">
             <div class="container">
-                <h2 class="work-title">Чим ми займаємося</h2>
+                <h2 class="title">Чим ми займаємося</h2>
                 <ul class="work-list list">
                     <li class="work-item">
                         <img class="work-photo" src="./images/box1(1).jpg" alt="Людина за комп'ютером" width="370" height="294">
@@ -119,7 +119,7 @@
         <!--Наша команда-->
         <section class="team section"> 
             <div class="container">
-                <h2 class="work-title">Наша команда</h2>
+                <h2 class="title">Наша команда</h2>
                 <ul class="team-list list">
                     <li  class="teammate-item ">
                         <img class="teammate-photo" src="./images/img(4).jpg" alt="Чоловік дизайнер" width="270" height="260">
@@ -266,7 +266,7 @@
         </section>
         <section class="section">
             <div class="container">
-                <h2 class="work-title title">Наші клієнти</h2>
+                <h2 class="title">Наші клієнти</h2>
                     <ul class="clients-list list">
                         <li class="clients-item">
                             <a class="clients-link link icon-company-one" href="">
@@ -365,7 +365,7 @@
                 <p class="footer-title">Підпишіться на розсилку</p>
                 <form class="form-field">
                     <input type="email" placeholder="E-mail">
-                        <button type="submit" class="subscribe-btn btn">Підписатися
+                        <button type="submit" class="main-btn subscribe-btn btn">Підписатися
                             <svg class="icon-subscribe" width="24" height="24">
                                 <use href="./images/icons.svg/sprite.svg#icon-send"></use>
                             </svg>
@@ -414,7 +414,7 @@
                         Погоджуюся з розсилкою та приймаю<a href="" class="policy-link">Умови договору</a>
                     </label>
                 </div>
-                <button type="submit" class="hero-btn btn">Відправити</button>
+                <button type="submit" class="main-btn btn">Відправити</button>
             </form>
             <button type="button" class="button-close btn" data-modal-close>
                 <svg class="icon-close" width="18" height="18">
