--- a/portfolio.html
+++ b/portfolio.html
@@ -177,66 +177,64 @@
         </section>
     </main>
     <!-- Футер -->
-<footer class="page-footer">
-    <div class="footer-container container">
-        <div class="adress-container">
-            <a class="footer-logo link" href="./index.html"><span class="logotype-color">Web</span>Studio</a>
-            <address>
-                <ul class="address-list list">
-                    <li class="item"><a class="address-item link" href="https://goo.gl/maps/PbxRFZqhhUMo3QMw8"
-                            target="_blank">м. Київ, пр-т Лесі
-                            Українки, 26</a></li>
-                    <li class="item"><a class="footer-contact link"
-                            href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="item"><a class="footer-contact link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-                </ul>
-            </address>
-        </div>
-        <div>
-            <p class="footer-title">ПРИЄДНУЙТЕСЬ</p>
-            <ul class="link-list footer-list list">
-                <li class="link-item">
-                    <a class="social-link footer-link link" href="">
-                        <svg class="footer-icon" width="20" height="20">
-                            <use href="./images/icons.svg/sprite.svg#icon-instagram-2"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="link-item">
-                    <a class="social-link footer-link link" href="">
-                        <svg class="footer-icon" width="20" height="20">
-                            <use href="./images/icons.svg/sprite.svg#icon-twitter-1"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="link-item">
-                    <a class="social-link footer-link link" href="">
-                        <svg class="footer-icon" width="20" height="20">
-                            <use href="./images/icons.svg/sprite.svg#icon-facebook-1"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="link-item">
-                    <a class="social-link footer-link link" href="">
-                        <svg class="footer-icon" width="20" height="20">
-                            <use href="./images/icons.svg/sprite.svg#icon-linkedin-1"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="subscribe">
-            <p class="footer-title">Підпишіться на розсилку</p>
-            <div class="form-field">
-                <input type="email" placeholder="E-mail">
-                <button type="submit" class="subscribe-btn btn">Підписатися
-                    <svg class="icon-subscribe" width="24" height="24">
-                        <use href="./images/icons.svg/sprite.svg#icon-send"></use>
-                    </svg>
-                </button>
+    <footer class="page-footer">
+        <div class="footer-container container">
+            <div class="adress-container">
+                <a class="footer-logo link" href="./index.html"><span class="logotype-color">Web</span>Studio</a>
+                <address>
+                    <ul class="address-list list">
+                        <li class="item"><a class="address-item link" href="https://goo.gl/maps/PbxRFZqhhUMo3QMw8" target="_blank">м. Київ, пр-т Лесі
+                                    Українки, 26</a></li>
+                        <li class="item"><a class="footer-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="item"><a class="footer-contact link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                 </ul>
+                </address>
+            </div>
+            <div class="social-link-container">
+                <p class="footer-title">Приєднуйтесь</p>
+                    <ul class="link-list footer-list list">
+                        <li class="link-item">
+                            <a class="social-link footer-link link" href="">
+                                <svg class="footer-icon" width="20" height="20">
+                                    <use href="./images/icons.svg/sprite.svg#icon-instagram-2"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="link-item">
+                            <a class="social-link footer-link link" href="">
+                                <svg class="footer-icon" width="20" height="20">
+                                    <use href="./images/icons.svg/sprite.svg#icon-twitter-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="link-item">
+                            <a class="social-link footer-link link" href="">
+                                <svg class="footer-icon" width="20" height="20">
+                                    <use href="./images/icons.svg/sprite.svg#icon-facebook-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="link-item">
+                            <a class="social-link footer-link link" href="">
+                                <svg class="footer-icon" width="20" height="20">
+                                    <use href="./images/icons.svg/sprite.svg#icon-linkedin-1"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+            </div>
+            <div class="subscribe">
+                <p class="footer-title">Підпишіться на розсилку</p>
+                <form class="form-field">
+                    <input type="email" placeholder="E-mail">
+                        <button type="submit" class="main-btn subscribe-btn btn">Підписатися
+                            <svg class="icon-subscribe" width="24" height="24">
+                                <use href="./images/icons.svg/sprite.svg#icon-send"></use>
+                            </svg>
+                        </button>
+                </form>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
 </body>
 </html>
